# recall-loader-cli

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  hoku.sh  recall.sh
.github/data/: config.json
.github/workflows/: build-image.yml
src/: config.rs  funder.rs  lib.rs  main.rs
src/commands/: delete.rs  downloader.rs  mod.rs  query.rs  runner.rs
src/stats/: aggregator.rs  collector.rs  mod.rs  ops.rs
src/targets/: mod.rs  sdk.rs
test-config/: sample.json
